--- a/dad_final-war/web/WEB-INF/templates/BasicTemplate.xhtml
+++ b/dad_final-war/web/WEB-INF/templates/BasicTemplate.xhtml
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
-    <head>
+    <h:head>
         <title><ui:insert name="title">DAD - Projeto Final</ui:insert></title>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" http-equiv="X-UA-Conpatible" />
         <link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/resources/css/bootstrap.min.css" />
-    </head>
-    <body>
+    </h:head>
+    <h:body>
         <div id="header">
             <ui:insert name="header">
                 <ui:include src="/WEB-INF/templates/header.xhtml" />
@@ -26,5 +26,5 @@
         </div>
         <script src="#{facesContext.externalContext.requestContextPath}/resources/js/jquery.min.js"></script>
         <script src="#{facesContext.externalContext.requestContextPath}/resources/js/bootstrap.min.js"></script>
-    </body>
+    </h:body>
 </html>
